# rust

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  _rust-toolchain.toml  readme.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
crates/dashmap_/: Cargo.toml
crates/dashmap_/.cargo/: config.toml
crates/dashmap_/src/: get_lock.rs  lib.rs
demo/bench_block_on/: Cargo.toml  readme.md
demo/bench_block_on/benches/: bench_.rs
demo/ca/: ge.sh
demo/extreme_performance/: Cargo.toml  README.md
demo/extreme_performance/benches/: bench_.rs
demo/extreme_performance/src/: main.rs
demo/ffi/: CMakeLists.txt  Cargo.toml  README.md  build.rs  ffi.cpp
demo/ffi/cpp/: data.h  sample.cpp  sample.h
demo/ffi/src/: main.rs
demo/fn_gen_trait_closure/: Cargo.toml  readme.md
demo/fn_gen_trait_closure/benches/: bench_fn.rs
rust/: Cargo.toml
rust/benches/: block_on_.rs
rust/src/: caller.rs  copy_.rs  doc_.rs  env_.rs  format_.rs  lib.rs
rust/src/args/: args_.rs  mod.rs
rust/src/async_thread/: app_async_a.rs  app_async_b.rs  async_trait_.rs  block_on_.rs  life_.rs  life_enum_struct.rs  mod.rs  order_.rs  spawn_async.rs  spawn_scope.rs  thread_.rs  thread_local_.rs  tokio_select.rs
rust/src/async_thread/performe/: channel_time.rs  data.rs  fn_async.rs  lock_notify.rs  spawn_time.rs  thread_async.rs  thread_fn.rs
rust/src/closure_/: closure_test.rs  mod.rs
rust/src/design/: mod.rs
rust/src/design/bytes_object/: m2.rs
rust/src/generics_/: const_.rs  mod.rs
rust/src/lang_/: assignment.rs  enum_.rs  match_.rs  mod.rs  r_static.rs  size_of_.rs  sized_.rs  struct_enum_union.rs  tuple_copy.rs  types_.rs
rust/src/life_/: mod.rs  node_.rs  nolife_.rs
rust/src/macro_/: mod.rs
rust/src/net_/: http_.rs
rust/src/panic_error/: option_.rs  panic_.rs
rust/src/ref_pointer/: drop_.rs  memory_leak.rs  mod.rs  pointer_.rs  ref_lifetime.rs  slice_to_array.rs
rust/src/trait_/: from_.rs  mod.rs  trait_object_.rs  trait_test.rs
rust_kits/: Cargo.toml  README.md
rust_kits/src/: lib.rs
rust_kits/src/executor/: executor_.rs  mod.rs
rust_kits/src/logger/: mod.rs  std_out.rs
rust_kits/src/syncx/: app_.rs  atomic_get_set.rs  atomic_relaxed.rs  atomic_t.rs  channel_.rs  mod.rs  task.rs  thread_option.rs  thread_task.rs  thread_task_data.rs
src/: block_on_.rs  caller.rs  closure_.rs  copy_.rs  doc_.rs  env_.rs  errors_.rs  format_.rs  lib.rs  macro_.rs  pointer.rs  pointer_.rs  r_static.rs  readme.md  sized_.rs  spawn_async.rs  thread_.rs  types.rs  types_.rs
src/async_/: life_.rs  life_enum_struct.rs  mod.rs
src/async_thread/: async_trait_.rs  block_on_.rs  life_.rs  life_enum_struct.rs  mod.rs  order_.rs  spawn_async.rs  spawn_scope.rs  thread_.rs
src/async_thread/performe/: thread_async.rs  thread_fn.rs
src/closure_/: closure_.rs  mod.rs
src/demo_2022_0226/: demo1.rs  mod.rs
src/design/: mod.rs
src/design/bytes_object/: README.md  m1.rs  m2.rs  m3.rs  mod.rs
src/lang_/: assignment.rs  construct.rs  convert_.rs  enum_.rs  match_.rs  mod.rs  r_static.rs  size_of_.rs  sized_.rs  struct_enum_union.rs  tuple_copy.rs
src/life_/: mod.rs  nolife_.rs
src/net_/: http_.rs
src/panic_/: mod.rs  panic_.rs
src/panic_error/: errors_.rs  mod.rs  option_.rs  panic_.rs
src/proc_/: mod.rs  proc_test.rs
src/ref_pointer/: drop_.rs  memory_leak.rs  mod.rs  pointer_.rs  ref_lifetime.rs
src/trait_/: from_.rs  mod.rs  trait_.rs  trait_object_.rs
