[package]
name = "rust"
version = "0.1.0"
authors = ["Peacess <peacess@163.com>"]
edition = "2021"

[lib]
name = "rust"
path = "src/lib.rs"

[dependencies]
lazy_static = "*"
once_cell = "*"
static_init = "*"
tokio = { version = "*", features = ["full"] }
num_cpus = "*"
libc = "*"
procinfo = "*"

crossbeam-channel = "0.5"

futures = "*"
crossbeam = "*"
async-task = "*"
waker-fn = "*"
pin-utils = "*"
async-std = "*"
futures-lite = "*"
smol = "*"
extreme = "*"

criterion = { version = "0.5.1", features = ["html_reports"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[dev-dependencies]
futures-io = "*"

[workspace]
members = ["./","rust_kits", "demo/bench_block_on", "demo/fn_gen_trait_closure", "crates/dashmap_"]

[[bin]]
name = "mybin"
path = "src/main.rs"

[[bin]]
name = "http_"
path = "src/net_/http_.rs"

[[bin]]
name = "memory_leak"
path = "src/ref_pointer/memory_leak.rs"

[[bin]]
name = "thread_async"
path = "src/async_thread/performe/thread_async.rs"

[[bin]]
name = "thread_fn"
path = "src/async_thread/performe/thread_fn.rs"

[[bench]]
name = "bench_block_on"
path = "src/async_thread/block_on_.rs"
harness = false
