[package]
name = "rust"
version = "0.1.0"
authors = ["Peacess <peacess@163.com>"]
edition = "2021"

[lib]
name = "rust"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.19.0"
static_init = "1.0.3"
tokio = { version = "1.37.0", features = ["full"] }
num_cpus = "1.16.0"
libc = "0.2.155"
procinfo = "0.4.2"

crossbeam-channel = "0.5"

futures = "0.3.30"
crossbeam = "0.8.4"
async-task = "4.7.1"
waker-fn = "1.2.0"
pin-utils = "0.1.0"
async-std = "1.12.0"
futures-lite = "2.3.0"
smol = "2.0.0"
extreme = "666.666.666666"
zip="2.1.0"
nolife="0.3.3"

criterion = { version = "0.5.1", features = ["html_reports"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[dev-dependencies]
futures-io = "0.3.30"

[workspace]
members = ["./","rust_kits", "demo/bench_block_on", "demo/fn_gen_trait_closure", "crates/dashmap_"]

[[bin]]
name = "mybin"
path = "src/main.rs"

[[bin]]
name = "http_"
path = "src/net_/http_.rs"

[[bin]]
name = "memory_leak"
path = "src/ref_pointer/memory_leak.rs"

[[bin]]
name = "thread_async"
path = "src/async_thread/performe/thread_async.rs"

[[bin]]
name = "thread_fn"
path = "src/async_thread/performe/thread_fn.rs"

[[bench]]
name = "bench_block_on"
path = "src/async_thread/block_on_.rs"
harness = false
