[package]
name = "rust"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lazy_static = "1.5.0"
once_cell = "1.19.0"
static_init = "1.0.3"
tokio = { version = "1.40.0", features = ["full"] }
num_cpus = "1.16.0"
libc = "0.2.158"
sysinfo = "0.31.4"

crossbeam-channel = "0.5.13"
kanal = "0.1.0-pre8"

parking_lot = "0.12.3"
futures = "0.3.30"
crossbeam = "0.8.4"
async-task = "4.7.1"
waker-fn = "1.2.0"
pin-utils = "0.1.0"
async-std = "1.13.0"
futures-lite = "2.3.0"
smol = "2.0.1"
extreme = "666.666.666666"
zip="2.2.0"
nolife= "0.4.0"

criterion = { version = "0.5.1", features = ["html_reports"] }

rust_kits = {path = "../rust_kits"}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[dev-dependencies]
futures-io = "0.3.30"

[features]
unstable = []

[[bin]]
name = "http_"
path = "src/net_/http_.rs"

[[bin]]
name = "memory_leak"
path = "src/ref_pointer/memory_leak.rs"

[[bin]]
name = "spawn_time"
path = "src/async_thread/performe/spawn_time.rs"

[[bin]]
name = "fn_async"
path = "src/async_thread/performe/fn_async.rs"

[[bin]]
name = "channel"
path = "src/async_thread/performe/channel_time.rs"
harness = false

[[bin]]
name = "lock"
path = "src/async_thread/performe/lock_notify.rs"
harness = false


[[bench]]
name = "bench_block_on"
path = "src/async_thread/block_on_.rs"
harness = false

