[package]
name = "rust"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
lazy_static = "1.5.0"
once_cell = "1.21.3"
static_init = "1.0.3"
tokio = { version = "1.44.2", features = ["full"] }
num_cpus = "1.16.0"
libc = "0.2.172"
sysinfo = "0.34.2"
regex = "1.7.4"

crossbeam-channel = "0.5.15"
kanal = "0.1.1"

parking_lot = "0.12.3"
futures = "0.3.31"
crossbeam = "0.8.4"
async-task = "4.7.1"
waker-fn = "1.2.0"
pin-utils = "0.1.0"
async-std = "1.13.1"
futures-lite = "2.6.0"
smol = "2.0.2"
extreme = "666.666.666666"
zip="2.6.1"
nolife= "0.4.0"
dashmap = "6.1.0"

criterion = { version = "0.5.1", features = ["html_reports"] }

rust_kits = {path = "../rust_kits"}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"

[dev-dependencies]
futures-io = "0.3.31"

[features]
unstable = []

[[bin]]
name = "http_"
path = "src/net_/http_.rs"

[[bin]]
name = "memory_leak"
path = "src/ref_pointer/memory_leak.rs"

[[bin]]
name = "spawn_time"
path = "src/async_thread/performe/spawn_time.rs"

[[bin]]
name = "fn_async"
path = "src/async_thread/performe/fn_async.rs"

[[bin]]
name = "channel"
path = "src/async_thread/performe/channel_time.rs"
harness = false

[[bin]]
name = "lock"
path = "src/async_thread/performe/lock_notify.rs"
harness = false

[[bin]]
name = "data"
path = "src/async_thread/performe/data.rs"
harness = false


