[package]
name = "rust_kits"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "rust tool kits"
repository = "https://github.com/peacess/rust"
homepage = "https://github.com/peacess/rust"
keywords = ["rust", "kits"]
categories = ["concurrency"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace= true
anyhow.workspace= true
#env_logger = "0.11.5"
atomic_g = { package = "atomic",  version = "0.6.0" }
parking_lot.workspace = true
bytemuck = "1.24.0"
walkdir = "2.5.0"
clap = { version = "4.5.48", features = ["derive"] }
# for generate ca self
rcgen = { version = "0.14.5", features = ["pem", "x509-parser","aws_lc_rs"] }
pem = "3.0.5"
x509-parser = "0.18.0"

[[bin]]
name = "generate_certificate"
path = "src/bin/generate_certificate.rs"

[[bin]]
name = "show_certificate"
path = "src/bin/show_certificate.rs"
