[package]
name = "bench_block_on"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
#async-task = "1.3.1"
crossbeam = "0.8.4"
extreme = "666.666.666666"
futures = "0.3.30"
futures-lite = "2.3.0"
pin-utils = "0.1.0"
smol = "2.0.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
waker-fn = "1.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_"
harness = false
