[package]
name = "bench_block_on"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-std = "1.13.0"
crossbeam = "0.8.4"
extreme = "666.666.666666"
futures = "0.3.31"
futures-lite = "2.6.0"
smol = "2.0.2"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
waker-fn = "1.2.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_"
harness = false
