[package]
name = "bench_block_on"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-std.workspace = true
crossbeam.workspace = true
futures.workspace = true
futures-lite.workspace = true
smol.workspace = true
tokio.workspace = true

extreme = "666.666.666666"
waker-fn = "1.2.0"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_"
harness = false
