[package]
name = "extreme_performance_"
description = "extreme single pc performance"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = "1.40.0"
core_affinity = "0.8.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_"
harness = false