[package]
name = "fn_gen_trait_closure"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench_fn"
harness = false
